--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 .DS_Store
 __pycache__/
-anlys/tensor_rot/*.h5
-anlys/tensor_rot/movies/
-anlys/tensor_rot/logs/
-movie/
+anlys/movie/movies/
+anlys/movie/logs/
 
 # paper/
 paper/ms.pdf
